force-app/main/default/objects/Custom_Product__c/Custom_Product__c.object-meta.xml
<CustomObject>
    <label>Custom Product</label>
    <nameField>
        <label>Custom Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>