force-app/main/default/objects/Custom_Product__c/fields/C_List_Price__c.field-meta.xml
<CustomField>
    <fullName>C_List_Price__c</fullName>
    <label>C List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>