force-app/main/default/objects/Custom_Product__c/fields/C_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>C_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Custom Products</relationshipLabel>
    <relationshipName>Custom_Products</relationshipName>
    <type>Lookup</type>
</CustomField>