force-app/main/default/objects/Custom_Product__c/fields/C_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>C_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Custom Products</relationshipLabel>
    <relationshipName>Custom_Products</relationshipName>
    <type>Lookup</type>
</CustomField>