force-app/main/default/objects/Custom_Product__c/fields/C_Price_Factor__c.field-meta.xml
<CustomField>
    <fullName>C_Price_Factor__c</fullName>
    <label>C Price Factor</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>