force-app/main/default/objects/Custom_Product__c/fields/C_Product__c.field-meta.xml
<CustomField>
    <fullName>C_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Custom Products</relationshipLabel>
    <relationshipName>Custom_Products</relationshipName>
    <type>Lookup</type>
</CustomField>