force-app/main/default/objects/Custom_Product__c/fields/C_Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>C_Product_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C. Product Bundle</label>
    <type>Checkbox</type>
</CustomField>