force-app/main/default/objects/Custom_Product__c/fields/C_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>C_Product_Code__c</fullName>
    <label>C. Product Code</label>
    <length>211</length>
    <type>Text</type>
</CustomField>