force-app/main/default/objects/Custom_Product__c/fields/C_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>C_Product_Description__c</fullName>
    <label>C. Product Description</label>
    <length>244</length>
    <type>Text</type>
</CustomField>