force-app/main/default/objects/Custom_Product__c/fields/C_Product_Dimension__c.field-meta.xml
<CustomField>
    <fullName>C_Product_Dimension__c</fullName>
    <label>C Product DImension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>