force-app/main/default/objects/Custom_Product__c/fields/C_Quantity__c.field-meta.xml
<CustomField>
    <fullName>C_Quantity__c</fullName>
    <label>C Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>